z-index fixato

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.menuOpened {
+    z-index: 999 !important;
+}
